--- a/DreamLister/Base.lproj/Main.storyboard
+++ b/DreamLister/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="tsS-2N-qaQ">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--DreamLister-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DreamLister" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,139 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="UXm-8R-4Wq">
+                                <rect key="frame" x="20" y="84" width="335" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="hwV-Aj-Bef"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Newest"/>
+                                    <segment title="Price"/>
+                                    <segment title="Title"/>
+                                </segments>
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="147" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ibc-Jc-AAC">
+                                <rect key="frame" x="12" y="132" width="351" height="535"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="147" id="8vx-bL-lsR">
+                                        <rect key="frame" x="0.0" y="28" width="351" height="147"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8vx-bL-lsR" id="6ON-Pt-Ke3">
+                                            <rect key="frame" x="0.0" y="0.0" width="351" height="146.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="24u-8g-1In">
+                                                    <rect key="frame" x="8" y="8" width="335" height="130.5"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tesla" translatesAutoresizingMaskIntoConstraints="NO" id="q7q-4m-Gjy">
+                                                            <rect key="frame" x="8" y="15.5" width="100" height="100"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="100" id="D5A-bE-2i8"/>
+                                                                <constraint firstAttribute="width" constant="100" id="FqV-s3-auU"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tesla" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zEY-ah-6v9">
+                                                            <rect key="frame" x="116" y="8" width="211" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="21" id="LqM-hE-f38"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$$$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gej-g4-BSa">
+                                                            <rect key="frame" x="116" y="37" width="211" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="21" id="230-EE-f7g"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Got $?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="6oZ-zF-hbX">
+                                                            <rect key="frame" x="116" y="66" width="211" height="56.5"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="6oZ-zF-hbX" firstAttribute="leading" secondItem="q7q-4m-Gjy" secondAttribute="trailing" constant="8" id="0a5-nV-Jie"/>
+                                                        <constraint firstItem="Gej-g4-BSa" firstAttribute="top" secondItem="zEY-ah-6v9" secondAttribute="bottom" constant="8" id="C6Z-gU-uDH"/>
+                                                        <constraint firstAttribute="trailing" secondItem="6oZ-zF-hbX" secondAttribute="trailing" constant="8" id="Je6-bK-j0T"/>
+                                                        <constraint firstAttribute="bottom" secondItem="6oZ-zF-hbX" secondAttribute="bottom" constant="8" id="Kei-OO-5cN"/>
+                                                        <constraint firstItem="q7q-4m-Gjy" firstAttribute="centerY" secondItem="24u-8g-1In" secondAttribute="centerY" id="M26-Gy-DnN"/>
+                                                        <constraint firstItem="zEY-ah-6v9" firstAttribute="leading" secondItem="q7q-4m-Gjy" secondAttribute="trailing" constant="8" id="NsG-qg-8dl"/>
+                                                        <constraint firstItem="zEY-ah-6v9" firstAttribute="top" secondItem="24u-8g-1In" secondAttribute="top" constant="8" id="Ts0-im-7pk"/>
+                                                        <constraint firstItem="q7q-4m-Gjy" firstAttribute="leading" secondItem="24u-8g-1In" secondAttribute="leading" constant="8" id="Uth-qV-htq"/>
+                                                        <constraint firstItem="6oZ-zF-hbX" firstAttribute="top" secondItem="Gej-g4-BSa" secondAttribute="bottom" constant="8" id="VWI-e3-kRK"/>
+                                                        <constraint firstItem="Gej-g4-BSa" firstAttribute="leading" secondItem="q7q-4m-Gjy" secondAttribute="trailing" constant="8" id="Zjk-92-Idz"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Gej-g4-BSa" secondAttribute="trailing" constant="8" id="gzz-6x-x3E"/>
+                                                        <constraint firstAttribute="trailing" secondItem="zEY-ah-6v9" secondAttribute="trailing" constant="8" id="sYb-1x-hIW"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="24u-8g-1In" secondAttribute="trailing" constant="8" id="1gt-xM-RjM"/>
+                                                <constraint firstItem="24u-8g-1In" firstAttribute="top" secondItem="6ON-Pt-Ke3" secondAttribute="top" constant="8" id="oa9-mU-LVq"/>
+                                                <constraint firstItem="24u-8g-1In" firstAttribute="leading" secondItem="6ON-Pt-Ke3" secondAttribute="leading" constant="8" id="u1R-Xq-HfV"/>
+                                                <constraint firstAttribute="bottom" secondItem="24u-8g-1In" secondAttribute="bottom" constant="8" id="wVU-gx-wga"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="UXm-8R-4Wq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="9nU-cB-Rjt"/>
+                            <constraint firstItem="Ibc-Jc-AAC" firstAttribute="top" secondItem="UXm-8R-4Wq" secondAttribute="bottom" constant="20" id="Nm0-cN-rtj"/>
+                            <constraint firstItem="UXm-8R-4Wq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="fyA-FZ-Btr"/>
+                            <constraint firstAttribute="trailing" secondItem="Ibc-Jc-AAC" secondAttribute="trailing" constant="12" id="gae-83-tIm"/>
+                            <constraint firstItem="Ibc-Jc-AAC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="12" id="hrC-4S-oW6"/>
+                            <constraint firstAttribute="trailing" secondItem="UXm-8R-4Wq" secondAttribute="trailing" constant="20" id="zS0-BQ-fCG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ibc-Jc-AAC" secondAttribute="bottom" id="zWJ-nV-ZOC"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="DreamLister" id="ygQ-vW-QHM">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="rWX-jJ-9mN">
+                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="138.98050974512745"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="CrX-fa-tDj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tsS-2N-qaQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="kHQ-OS-RgC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="f83-7h-BaM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CDm-uN-xsV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="133.59999999999999" y="792.95352323838085"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tesla" width="800" height="489"/>
+    </resources>
 </document>
