added itemType picker and sorting

--- a/DreamLister/Base.lproj/Main.storyboard
+++ b/DreamLister/Base.lproj/Main.storyboard
@@ -31,6 +31,7 @@
                                     <segment title="Newest"/>
                                     <segment title="Price"/>
                                     <segment title="Title"/>
+                                    <segment title="Category"/>
                                 </segments>
                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
@@ -220,7 +221,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hXT-iQ-IGW">
+                            <pickerView tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hXT-iQ-IGW">
                                 <rect key="frame" x="16" y="393" width="343" height="216"/>
                                 <connections>
                                     <outlet property="dataSource" destination="jPd-HW-mpd" id="GT9-VH-6TL"/>
@@ -241,6 +242,14 @@
                                     <action selector="savePressed:" destination="jPd-HW-mpd" eventType="touchUpInside" id="0t0-eJ-GGw"/>
                                 </connections>
                             </button>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N1X-zn-SU0">
+                                <rect key="frame" x="16" y="210" width="343" height="130"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="jPd-HW-mpd" id="sE8-eO-y6s"/>
+                                    <outlet property="delegate" destination="jPd-HW-mpd" id="DFR-Qb-3fE"/>
+                                </connections>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -282,6 +291,7 @@
                         <outlet property="storePicker" destination="hXT-iQ-IGW" id="H1X-D1-Jdi"/>
                         <outlet property="thumbImg" destination="2eg-d2-WBp" id="H0c-xU-mdS"/>
                         <outlet property="titleField" destination="6ET-Fo-Wed" id="D4o-Uj-IdU"/>
+                        <outlet property="typePicker" destination="N1X-zn-SU0" id="hvv-4S-yq7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IBH-vL-DIO" userLabel="First Responder" sceneMemberID="firstResponder"/>
